--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
     name: build server
     runs-on: ubuntu-latest
 
+    environment: 
+      name: development
+
     steps:
       - name: checkout
         uses: actions/checkout@main
@@ -39,9 +42,9 @@ jobs:
       - name: 'az cli login'
         uses: azure/login@v1
         with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }}
-          tenant-id: ${{ vars.AZURE_TENANT_ID }}
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: az acr login
         shell: bash
@@ -51,7 +54,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ env.REGISTRY }}/seedo-server
+          images: ${{ vars.CONTAINER_REGISTRY }}/seedo-server
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -67,8 +70,8 @@ jobs:
           file: ./server/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }}
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }},mode=max
+          cache-from: type=registry,ref=${{ vars.CONTAINER_REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }}
+          cache-to: type=registry,ref=${{ vars.CONTAINER_REGISTRY }}/seedo-server-cache:${{ env.branch_name || 'latest' }},mode=max
 
   deploy_dev:
     name: bicep deploy (dev)
@@ -95,18 +98,18 @@ jobs:
       - name: 'az cli login'
         uses: azure/login@v1
         with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }}
-          tenant-id: ${{ vars.AZURE_TENANT_ID }}
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: deploy link
-        run: echo '[ARM Deployment - actions-sha-${{ github.sha }}](https://portal.azure.com/#view/HubsExtension/DeploymentDetailsBlade/~/overview/id/subscriptions/${{ vars.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ vars.RESOURCE_GROUP }}/providers/Microsoft.Resources/deployments/actions-sha-${{ github.sha }})' >> $GITHUB_STEP_SUMMARY
+        run: echo 'ARM Deployment - actions-sha-${{ github.sha }}' >> $GITHUB_STEP_SUMMARY
 
       - uses: azure/arm-deploy@v1
         name: arm deploy - deploy/bicep/deploy.bicep
         id: deploy
         with:
-          resourceGroupName: ${{ vars.RESOURCE_GROUP }}
+          resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP }}
           template: deploy/bicep/deploy.bicep
           deploymentName: 'actions-sha-${{ github.sha }}'
           parameters: >-
@@ -114,7 +117,7 @@ jobs:
             revisionSuffix=${{ env.short_sha }}
             imageTag=sha-${{ github.sha }}
             containerRegistryFQDN=${{ vars.CONTAINER_REGISTRY }}
-            containerAppEnvName=${{ vars.CONTAINER_APP_ENV_NAME }}
+            containerAppEnvName=${{ secrets.CONTAINER_APP_ENV_NAME }}
 
       - name: deploy results
         run: |
