--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,6 @@ permissions:
   id-token: write
   contents: read
 
-env:
-  REGISTRY: uphschcich.azurecr.io
-
 jobs:
   build_server:
     name: build server
@@ -42,9 +39,9 @@ jobs:
       - name: 'az cli login'
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
       - name: az acr login
         shell: bash
@@ -98,9 +95,9 @@ jobs:
       - name: 'az cli login'
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vsrs.AZURE_SUBSCRIPTION_ID }}
 
       - name: deploy link
         run: echo 'ARM Deployment - actions-sha-${{ github.sha }}' >> $GITHUB_STEP_SUMMARY
@@ -109,7 +106,7 @@ jobs:
         name: arm deploy - deploy/bicep/deploy.bicep
         id: deploy
         with:
-          resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP }}
           template: deploy/bicep/deploy.bicep
           deploymentName: 'actions-sha-${{ github.sha }}'
           parameters: >-
@@ -117,7 +114,7 @@ jobs:
             revisionSuffix=${{ env.short_sha }}
             imageTag=sha-${{ github.sha }}
             containerRegistryFQDN=${{ vars.CONTAINER_REGISTRY }}
-            containerAppEnvName=${{ secrets.CONTAINER_APP_ENV_NAME }}
+            containerAppEnvName=${{ vars.CONTAINER_APP_ENV_NAME }}
 
       - name: deploy results
         run: |
